# 1d-qt-ideal-solver

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
configs/: case1_rectangular.txt  case2_double.txt  case2_gaussian.txt  case2_rectangular.txt  case3_rectangular.txt  case3_triple.txt  case4_gaussian.txt  double_barrier.txt  gaussian_barrier.txt  periodic_potential.txt  rect_barrier.txt  step_potential.txt  triple_barrier.txt
src/qt1d_ideal/: __init__.py  cli.py
src/qt1d_ideal/core/: __init__.py  initial_conditions.py  solver.py
src/qt1d_ideal/io/: config_manager.py  data_handler.py
src/qt1d_ideal/utils/: __init__.py  logger.py  timer.py
src/qt1d_ideal/visualization/: __init__.py  animator.py
