[tool.poetry]
name = "1d-qt-ideal-solver"
version = "0.0.9"
description = "Idealized 1D quantum tunneling solver with two classic test cases"
authors = [
    "Sandy H. S. Herho <sandy.herho@email.ucr.edu>",
    "Siti N. Kaban",
    "Iwan P. Anwar",
    "Nurjanna J. Trilaksono",
    "Rusmawan Suwarman"
]
license = "MIT"
readme = "README.md"
packages = [{include = "qt1d_ideal", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.20.0"
scipy = ">=1.7.0"
matplotlib = ">=3.3.0"
netCDF4 = ">=1.5.0"
tqdm = ">=4.60.0"
numba = ">=0.53.0"

[tool.poetry.group.dev.dependencies]
black = ">=22.0.0"

[tool.poetry.scripts]
qt1d-simulate = "qt1d_ideal.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
